servo/tests/compiletest/plugin/compile-fail/privatize.rs
#
!
[
feature
(
plugin
custom_attribute
)
]
#
!
[
plugin
(
plugins
)
]
#
!
[
allow
(
dead_code
)
]
#
[
privatize
]
struct
Foo
{
pub
v1
:
i32
v2
:
i32
}
fn
main
(
)
{
}
